Proyecto actualizado, con footer, navbar, si hay recomendaciones de mejora, me muestra 3 productos los cuales serian compatibles con la build, AUN NO IMPLEMENTO EL BOTON DE COMPRA.

--- a/app/pages/admin/admin.html
+++ b/app/pages/admin/admin.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="../style-public.css">
 </head>
 <body>
+    <!-- NAVBAR -->
+    <nav class="navbar-mipc">
+        <span class="navbar-title">MiPC Express</span>
+        <button id="logout-btn">Cerrar sesión</button>
+    </nav>
     <main>
         <div class="component-container">
             <h1>Bienvenido al área de administración</h1>
@@ -106,8 +111,10 @@
             </div>
         </div>
 
-        <button id="logout-btn">Cerrar sesión</button>
     </main>
+    <footer class="footer-mipc">
+        <span>&copy; 2024 MiPC Express. Todos los derechos reservados.</span>
+    </footer>
     <script src="../admin.js"></script>
 </body>
 </html>
