--- a/app/pages/public.html
+++ b/app/pages/public.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="style-public.css">
 </head>
 <body>
+    <!-- NAVBAR -->
+    <nav class="navbar-mipc">
+        <span class="navbar-title">MiPC Express</span>
+        <button id="logout-btn">Cerrar sesión</button>
+    </nav>
     <main>
         <!-- Contenedor de componentes (izquierda) -->
         <div class="component-container">
@@ -84,10 +89,10 @@
                 <div id="mi-pc-recomendaciones"></div>
             </div>
         </div>
-        
-        <button id="logout-btn">Cerrar sesión</button>
     </main>
-
+    <footer class="footer-mipc">
+        <span>&copy; 2024 MiPC Express. Todos los derechos reservados.</span>
+    </footer>
     <script src="public.js"></script>
 </body>
 </html>
