--- a/app/pages/login.html
+++ b/app/pages/login.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="style-login.css">
 </head>
 <body>
+     <nav class="navbar-mipc">
+        <span class="navbar-title">MiPC Express</span>
+        
+    </nav>
     <div class="main-container">
         <div class="auth-container">
             <h1>Iniciar Sesión</h1>
@@ -23,6 +27,9 @@
             <p style="text-align: center; margin-top: 1rem;">¿No tienes cuenta? <a href="/register" class="link">Regístrate</a></p>
         </div>
     </div>
+    <footer class="footer-mipc">
+        <span>&copy; 2024 MiPC Express. Todos los derechos reservados.</span>
+    </footer>
     <script src="login.js"></script>
 </body>
 </html>
