Proyecto al 90%, me falta modificar las letras q se sobreponen, validaciones como datos negativos en campos de texto, EN ESTE COMMIT SE MODIFICA LA BASE DE DATOS, Se le agrega la columna precio, se agrega la tabla componentes, detalleventa, ventamaestra. Estoy cayendo en la locura

--- a/app/pages/register.html
+++ b/app/pages/register.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="style-login.css">
 </head>
 <body>
+    <nav class="navbar-mipc">
+        <span class="navbar-title">MiPC Express</span>
+        
+    </nav>
     <div class="main-container">
         <div class="auth-container">
             <h1>Registrarse</h1>
@@ -28,6 +32,9 @@
             </p>
         </div>
     </div>
+    <footer class="footer-mipc">
+        <span>&copy; 2024 MiPC Express. Todos los derechos reservados.</span>
+    </footer>
     <script src="register.js"></script>
 </body>
 </html>
