--- a/app/pages/register.html
+++ b/app/pages/register.html
@@ -9,7 +9,10 @@
 <body>
     <nav class="navbar-mipc">
         <span class="navbar-title">MiPC Express</span>
-        
+        <div>
+            <a href="/"><button class="btn" style="margin-right:10px;">Iniciar sesión</button></a>
+            <a href="/register"><button class="btn">Registrarse</button></a>
+        </div>
     </nav>
     <div class="main-container">
         <div class="auth-container">
